--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prisma": "^5.22.0",
     "react": "19.2.3",
     "react-calendar": "^6.0.0",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
